--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,76 @@
+[project]
+name = "cloudknot"
+dynamic = ["version"]
+requires-python = ">=3.7"
+license = { file = "LICENSE" }
+authors = [{ name = "Adam Richie-Halford", email = "richiehalford@gmail.com" }]
+maintainers = [
+	{ name = "Adam Richie-Halford", email = "richiehalford@gmail.com" }
+]
+description = "Cloudknot: a python library designed to run your existing python code on AWS Batch"
+readme = "README.md"
+classifiers = [
+	"Development Status :: 3 - Alpha",
+	"Environment :: Console",
+	"Intended Audience :: Science/Research",
+	"License :: OSI Approved :: MIT License",
+	"Operating System :: OS Independent",
+	"Programming Language :: Python",
+	"Topic :: Scientific/Engineering"
+]
+dependencies = [
+	"awscli",
+	"boto3>=1.5.21",
+	"botocore>=1.8.36",
+	"cloudpickle",
+	"docker>=3.0.0",
+	"pipreqs>=0.4.11",
+	"tenacity>=6.3.0"
+]
+
+[project.urls]
+"Homepage" = "https://nrdg.github.io/cloudknot"
+"Source" = "https://github.com/nrdg/cloudknot"
+
+[project.optional-dependencies]
+dev = [
+	"black==20.8b1",
+	"coverage==5.3",
+	"flake8==3.8.3",
+	"numpydoc==1.1.0",
+	"moto>=2.2.13.dev2",
+	"responses==0.12.0",
+	"pre-commit==2.9.2",
+	"pydocstyle==5.1.1",
+	"pytest-cov==2.10.1",
+	"pytest-xdist[psutil]==2.1.0",
+	"pytest==6.0.1",
+	"sphinx==3.2.1"
+]
+maint = ["rapidfuzz==0.12.2"]
+
+[project.scripts]
+cloudknot = "cloudknot.cli:main"
+
 [build-system]
 requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
 build-backend = "setuptools.build_meta"
 
-[tools.setuptools_scm]
+[tool.setuptools_scm]
+
+[tool.setuptools]
+package-data = { "cloudknot" = [
+	"data/*",
+	"data/*/*",
+	"data/*/*/*",
+	"data/*/*/*/*",
+	"templates/*"
+] }
 
 [tool.black]
 line-length = 88
 target-version = ['py37']
 exclude = '''
-
 (
   /(
       \.eggs         # exclude a few common directories in the
@@ -31,3 +93,18 @@ exclude = '''
                      # the root of the project
 )
 '''
+
+[tool.pytest.ini_options]
+addopts = "--doctest-modules"
+norecursedirs = "cloudknot/data"
+
+[tool.pydocstyle]
+convention = "numpy"
+match = "(?!_version).*\\.py"
+match-dir = "cloudknot"
+
+[tool.flake8]
+max-line-length = 88
+select = "C,E,F,W,B,B950"
+ignore = "E501,N802,N806,W503,E203"
+exclude = "setup.py,build,dist,doc,examples,cloudknot/data"
