--- a/setup.cfg
+++ b/setup.cfg
@@ -34,12 +34,12 @@ setup_requires =
 python_requires = >=3.6
 install_requires =
     awscli
-    boto3>=1.5.21
-    botocore>=1.8.36
+    boto3>
+    botocore
     cloudpickle
-    docker>=3.0.0
-    pipreqs>=0.4.11
-    tenacity>=6.3.0
+    docker
+    pipreqs
+    tenacity
 zip_safe = False
 include_package_data = True
 packages = find:
