--- a/cloudknot/templates/Dockerfile.template
+++ b/cloudknot/templates/Dockerfile.template
@@ -6,25 +6,23 @@
 # Use official python base image
 FROM ${base_image}
 
-# Install python dependencies
-COPY requirements.txt /tmp/
-RUN pip install --no-cache-dir -r /tmp/requirements.txt${github_installs_string}
+# Install python dependencies from requirements.txt if it exists
+COPY requirements.tx[t] /tmp/
+RUN ( test -f "/tmp/requirements.txt" && echo 1 && pip install --no-cache-dir -r "/tmp/requirements.txt${github_installs_string}" ) || echo "No requirements.txt file found"
 
 # Create a default user. Available via runtime flag `--user ${username}`.
-# Add user to "staff" group.
-# Give user a home directory.
-RUN (id -u ${username} >/dev/null 2>&1 || useradd ${username}) \
-    && addgroup ${username} staff \
-    && mkdir -p /home/${username} \
-    && chown -R ${username}:staff /home/${username}
+# Create a staff group if it does not exist.
+# Create a user, add them to the staff group, and create their home directory.
+RUN groupadd -f staff && useradd --create-home --groups staff "${username}"
 
-ENV HOME /home/${username}
+# Copy the python script
+COPY --chown=${username} "${script_base_name}" "/home/${username}/"
+
+# Set the user to use when running this image
+USER "${username}"
 
 # Set working directory
-WORKDIR /home/${username}
+WORKDIR "/home/${username}"
 
 # Set entrypoint
 ENTRYPOINT ["python", "/home/${username}/${script_base_name}"]
-
-# Copy the python script
-COPY ${script_base_name} /home/${username}/
