--- a/setup.cfg
+++ b/setup.cfg
@@ -31,12 +31,12 @@ platforms = OS Independent
 [options]
 setup_requires =
   setuptools_scm
-python_requires = >=3.6
+python_requires = >=3.9
 install_requires =
-    boto3>=1.5.21
-    awscli>=1.28.0
-    botocore>=1.8.36
-    cloudpickle
+    awscli
+    boto3
+    botocore
+    cloudpickle==3.0.0
     docker>=3.0.0
     pipreqs>=0.4.11
     tenacity>=6.3.0
@@ -57,7 +57,7 @@ dev =
     coverage==5.3
     flake8==3.8.3
     numpydoc==1.1.0
-    moto[cloudformation]==4.1.13
+    moto[cloudformation]==4.1.5
     pre-commit==3.3.3
     pydocstyle==5.1.1
     pytest-cov==2.10.1
