--- a/setup.cfg
+++ b/setup.cfg
@@ -33,10 +33,9 @@ setup_requires =
   setuptools_scm
 python_requires = >=3.6
 install_requires =
-    boto3>=1.34.31
-    awscli>=1.32.31
-    botocore>=1.34.31
-    cloudpickle
+    boto3>=1.34.55, <2.0.0
+    botocore>=1.34.55
+    cloudpickle>=3.0.0
     docker>=3.0.0
     pipreqs>=0.4.11
     tenacity>=6.3.0
