--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ console_scripts =
 
 [options.extras_require]
 dev =
-    black==23.7.0
+    black>=24.0
     coverage==5.3
     flake8==3.8.3
     numpydoc==1.1.0
