--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,8 @@
-repos:
--   repo: https://github.com/python/black
-    rev: 23.7.0
-    hooks:
-    - id: black
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.3.1
+  hooks:
+    # Run the linter.
+    #    - id: ruff
+    # Run the formatter.
+    - id: ruff-format
