--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[project]
+ [project]
 name = "cloudknot"
 dynamic = ["version"]
 requires-python = ">=3.10"
@@ -19,11 +19,13 @@ classifiers = [
 	"Topic :: Scientific/Engineering",
 ]
 dependencies = [
-	"awscli>=1.32.60,<2",
-	"boto3>=1.34.60,<2",
-	"botocore>=1.34.60,<2",
+	"awscli>=1.32.65,<2",
+	"boto3>=1.34.65,<2",
+	"botocore>=1.34.65,<2",
+	"boto3-stubs[essential,batch,ecs,ecr,iam]>=1.34.65,<2",
 	"cloudpickle>=3.0.0,<4",
 	"docker>=7.0.0,<8",
+	"packaging>=24.0.0,<25",
 	"pipreqs>=0.4.13,<0.5",
 	"tenacity>=8.2.3,<9",
 ]
@@ -41,9 +43,10 @@ dev = [
 	"pytest-cov>=4.1.0,<5",
 	"pytest-xdist[psutil]==2.1.0",
 	"pytest>=8.0.0,<9",
-	"ruff>=0.3.2,<1",
+ 	"ruff>=0.3.3,<1",
 	"sphinx>=5.3.0,<6",
 ]
+
 maint = ["rapidfuzz>=3.6.2,<4"]
 examples = ["ipykernel>=6.29.3,<7", "numpy>=1.26.4,<2"]
 
@@ -132,6 +135,9 @@ extend-ignore = [
 	"PLR",
 	"C901",
 	"D400",
+	"D102",
+	"D103",
+	"D105",
 	"PERF203",
 	"B904",
 	"PLW1514",
@@ -140,7 +146,8 @@ extend-ignore = [
 [tool.ruff.lint.extend-per-file-ignores]
 "cloudknot/_version.py" = ["D"]
 "cloudknot/aws/__init__.py" = ["F403"]
-"cloudknot/aws/*" = ["D100", "D103"]
+"cloudknot/aws/*.py" = ["D"]
+
 "cloudknot/data/*" = ["D"]
 "cloudknot/commands/*" = ["D"]
 "cloudknot/tests/*" = ["D"]
