--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ classifiers = [
 dependencies = [
     "boto3>=1.34.65,<2",
     "botocore>=1.34.65,<2",
-    "boto3-stubs[essential,batch,ecs,ecr,iam]>=1.34.65,<2",
     "cloudpickle>=3.0.0,<4",
     "docker>=7.0.0,<8",
     "packaging>=24.0.0,<25",
     "pipreqs>=0.4.13,<0.5",
     "tenacity>=8.2.3,<9",
+    "wrapt>=1.16.0,<2.0.0"
 ]
 
 [project.urls]
@@ -35,6 +35,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "boto3-stubs[essential,batch,ecs,ecr,iam]>=1.34.65,<2",
     "coverage>=7.4.4,<8",
     "moto[cloudformation]==4.1.5",
     "pre-commit>=3.6.2,<4",
